--- a/My Portfolio/index.html
+++ b/My Portfolio/index.html
@@ -120,13 +120,13 @@
                                 
                             </div>
                             <div>
-                                <span class="skills__percentage">65%</span>
+                                <span class="skills__percentage">85%</span>
                             </div>
                         </div>
                         <div class="skills__data">
                             <div class="skills__names">
                                 <i class='bx bxs-paint skills__icon'></i>
-                                <span class="skills__name">UX/UI</span>
+                                <span class="skills__name">java development </span>
                             </div>
                             <div class="skills__bar skills__ux">
                                 
